--- a/src/Components/ProductList/ProductList.css
+++ b/src/Components/ProductList/ProductList.css
@@ -20,15 +20,18 @@
   display: flex;
   justify-content: center;
 }
+
 .table {
   width: 64%;
   border-collapse: collapse;
 }
+
 .table th,
 .table td {
   border: 1px solid #dee2e6;
   padding: 10px;
 }
+
 .table thead {
   background-color: #e9ecef;
 }
@@ -59,4 +62,28 @@
   font-size: 23px;
   font-weight: 400;
   margin-right: 50px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.pagination-button {
+  padding: 5px 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+.pagination-button.active {
+  background-color: #ddd;
+}
+
+.pagination-button.disabled {
+  opacity: 0.5;
+  cursor: default;
 }
